<?xml version="1.0"?>
<package format="3">
  <name>adma_publisher</name>
  <version>1.0.0</version>
  <description>adma republish in perception kit msgs</description>

  <maintainer email="Neil.Mao@cn.bosch.com">Neil.Mao</maintainer>

  <license>BIOS v4</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roscpp</depend>
  <depend>perception_kit_msgs</depend>
  <depend>adma_msgs</depend>
  <depend>eigen</depend>

  <export>
  <!-- Other tools can request additional information be placed here -->
  </export>

</package>