<?xml version="1.0"?>
<package format="3">
  <name>perception_kit_msgs</name>
  <version>1.0.0</version>
  <description>Messages commonly used in perception kit components</description>

  <maintainer email="dennis.nienhueser@de.bosch.com">Dennis Nienhüser</maintainer>
  <maintainer email="Tobias.Baer3@de.bosch.com">Tobias Bär</maintainer>

  <license>BIOS v4</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
  </export>

</package>
