<?xml version="1.0"?>
<package format="2">
  <name>top95_general</name>
  <version>1.0.0</version>
  <description>General content for Top95: Scripts to startup, Sensor calibration, Assets (sprites, 3D meshes), ... </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="joachim.boerger@de.bosch.com">Joachim Börger</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/shu_ez10</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="joachim.boerger@de.bosch.com">Joachim Börger</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>ament_python</buildtool_depend>
  <!--build_depend>qtbase5-dev</build_depend-->
  <!--exec_depend>libqt5-widgets</exec_depend-->
  <!--depend>rviz_common</depend-->
  <!--depend>rviz_default_plugins</depend-->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>perception_kit_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
